creo ar design your own css and text domain fixes

--- a/skin/frontend/creo/default/style-ar.css
+++ b/skin/frontend/creo/default/style-ar.css
@@ -52,3 +52,4 @@ white-space:nowrap;}
 #header .cart .opener .count{left:inherit;right:15px;}
 .pdc-design-view .edit-tools{left:0;}
 .layer-final label{float:right;white-space:nowrap;}
+#product-options-wrapper{width:84%;}
