--- a/app/design/frontend/creo/default/template/page/html/head.phtml
+++ b/app/design/frontend/creo/default/template/page/html/head.phtml
@@ -46,6 +46,11 @@ if(Mage::helper('mobiledetect')->isMobile() && !Mage::helper('mobiledetect')->is
 //]]>
 </script>
 <![endif]-->
+<script>
+  window.errors_arr = [];
+  errors_arr['validate-emailAdress'] = "<?php echo $this->__('Email Adress is a required field.'); ?>";
+  errors_arr['validate-passwordlogin'] = "<?php echo $this->__('Password is a required field.'); ?>";
+</script>
 <?php echo $this->getCssJsHtml() ?>
 <?php echo $this->getChildHtml() ?>
 <?php echo $this->helper('core/js')->getTranslatorScript() ?>
