--- a/app/design/frontend/creo_mobile/default/template/page/html/header.phtml
+++ b/app/design/frontend/creo_mobile/default/template/page/html/header.phtml
@@ -48,6 +48,7 @@ is_product_details_page = true;
 <div class="main-menu">
   <a class="navbar-toggle bgr-icon glyphicon glyphicon-align-justify" data-toggle="offcanvas" data-target="#myNavmenu" data-canvas="body"></a>
 </div>
+<?php echo $this->getChildHtml('store_language') ?>
 </div>
 <div class="col-xs-4">
 	<strong class="logo">
