--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -806,6 +806,11 @@ border-bottom: 1px solid rgb(61, 62, 66);padding: 1em;text-transform: uppercase;
 #footer .copyright { display: block; color: #fff; font: 10px/12px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 #footer .column ul { margin: 0; padding: 0; text-transform: uppercase; list-style: none; color: #fff; font: 10px/12px "Roboto Condensed", Helvetica, Arial, sans-serif; }
 #footer .column li a { /*color: #fff;*/ }
+#select-language label{display:inline-block;padding:5px 10px;font-size:12px;text-transform:uppercase;vertical-align: top;margin:0;
+text-align:center;background-color:#000;color:#fff;text-decoration: none;cursor:pointer;}
+#select-language label:hover,#select-language label.selected{background-color:#ef4f61;}
+#select-language label input[type="radio"]{display:none;margin:0;}
+
 .scaffold-form .form-list { margin: 0; overflow: hidden; padding: 0; }
 .scaffold-form .form-list label { font-weight: normal; letter-spacing: 1px; }
 .scaffold-form .buttons-set .button { background: #f16167 none repeat scroll 0 0; border: medium none; color: #fff; height: 26px; padding: 5px 20px; }
