--- a/app/design/frontend/creo/default/template/page/html/head.phtml
+++ b/app/design/frontend/creo/default/template/page/html/head.phtml
@@ -32,9 +32,9 @@ if(Mage::helper('mobiledetect')->isMobile() && !Mage::helper('mobiledetect')->is
     echo '<meta name="viewport" content="initial-scale=1.0, width=device-width" />';
 }
 ?>
-<title><?php echo $this->getTitle() ?></title>
-<meta name="description" content="<?php echo htmlspecialchars($this->getDescription()) ?>" />
-<meta name="keywords" content="<?php echo htmlspecialchars($this->getKeywords()) ?>" />
+<title><?php echo $this->__($this->getTitle()); ?></title>
+<meta name="description" content="<?php echo $this->__(htmlspecialchars($this->getDescription())); ?>" />
+<meta name="keywords" content="<?php echo $this->__(htmlspecialchars($this->getKeywords())); ?>" />
 <meta name="robots" content="<?php echo htmlspecialchars($this->getRobots()) ?>" />
 <link rel="icon" href="<?php echo $this->getFaviconFile(); ?>" type="image/x-icon" />
 <link rel="shortcut icon" href="<?php echo $this->getFaviconFile(); ?>" type="image/x-icon" />
@@ -47,9 +47,9 @@ if(Mage::helper('mobiledetect')->isMobile() && !Mage::helper('mobiledetect')->is
 </script>
 <![endif]-->
 <script>
-  window.errors_arr = [];
-  errors_arr['validate-emailAdress'] = "<?php echo $this->__('Email Adress is a required field.'); ?>";
-  errors_arr['validate-passwordlogin'] = "<?php echo $this->__('Password is a required field.'); ?>";
+window.errors_arr = [];
+errors_arr['validate-emailAdress'] = "<?php echo $this->__('Email Adress is a required field.'); ?>";
+errors_arr['validate-passwordlogin'] = "<?php echo $this->__('Password is a required field.'); ?>";
 </script>
 <?php echo $this->getCssJsHtml() ?>
 <?php echo $this->getChildHtml() ?>
