--- a/app/design/frontend/creo_mobile/default/template/page/html/head.phtml
+++ b/app/design/frontend/creo_mobile/default/template/page/html/head.phtml
@@ -26,7 +26,7 @@
 ?>
 <meta http-equiv="Content-Type" content="<?php echo $this->getContentType() ?>" />
 <meta name="viewport" content="initial-scale=1.0, width=device-width" />
-<title><?php echo $this->getTitle() ?></title>
+<title><?php echo $this->__($this->getTitle()); ?></title>
 <meta name="description" content="<?php echo htmlspecialchars($this->getDescription()) ?>" />
 <meta name="keywords" content="<?php echo htmlspecialchars($this->getKeywords()) ?>" />
 <meta name="robots" content="<?php echo htmlspecialchars($this->getRobots()) ?>" />
@@ -40,6 +40,11 @@
 //]]>
 </script>
 <![endif]-->
+<script>
+  window.errors_arr = [];
+  errors_arr['validate-emailAdress'] = "<?php echo $this->__('Email Adress is a required field.'); ?>";
+  errors_arr['validate-passwordlogin'] = "<?php echo $this->__('Password is a required field.'); ?>";
+</script>
 <?php echo $this->getCssJsHtml() ?>
 <?php echo $this->getChildHtml() ?>
 <?php echo $this->helper('core/js')->getTranslatorScript() ?>
