--- a/app/design/frontend/creo_mobile/default/template/page/html/breadcrumbs.phtml
+++ b/app/design/frontend/creo_mobile/default/template/page/html/breadcrumbs.phtml
@@ -34,15 +34,15 @@
         <?php foreach($crumbs as $_crumbName=>$_crumbInfo): ?>
             <li class="<?php echo $_crumbName ?>">
             <?php if($_crumbInfo['link']): ?>
-                <a href="<?php echo $_crumbInfo['link'] ?>" title="<?php echo $this->escapeHtml($_crumbInfo['title']) ?>"><?php echo $this->escapeHtml($_crumbInfo['label']) ?></a>
+                <a href="<?php echo $_crumbInfo['link'] ?>" title="<?php echo $this->escapeHtml($_crumbInfo['title']) ?>"><?php echo $this->__($this->escapeHtml($_crumbInfo['label'])); ?></a>
             <?php elseif($_crumbInfo['last']): ?>
-				<?php 
-					$currentUrl = Mage::helper('core/url')->getCurrentUrl();
-					$label = $this->escapeHtml($_crumbInfo['label']);
-				 	echo Mage::helper('functions/data')->updateBreadcrumbs($currentUrl, $label);
-				?>
+    <?php
+        $currentUrl = Mage::helper('core/url')->getCurrentUrl();
+        $label = $this->__($this->escapeHtml($_crumbInfo['label']));
+        echo $this->__(Mage::helper('functions/data')->updateBreadcrumbs($currentUrl, $label));
+    ?>
             <?php else: ?>
-                <?php echo $this->escapeHtml($_crumbInfo['label']) ?>
+                <?php echo $this->__($this->escapeHtml($_crumbInfo['label'])); ?>
             <?php endif; ?>
             <?php if(!$_crumbInfo['last']): ?>
                 <span> </span>
