--- a/app/design/frontend/creo/default/template/catalog/product/view/options/type/default.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/view/options/type/default.phtml
@@ -26,5 +26,5 @@
 ?>
 <?php $_option = $this->getOption() ?>
 <dt>
-    <label><?php echo  $this->escapeHtml($_option->getTitle()) ?></label>
+    <label><?php echo  $this->__($this->escapeHtml($_option->getTitle())); ?></label>
 </dt>
