--- a/app/design/frontend/creo_mobile/default/template/catalog/category/categorylist.phtml
+++ b/app/design/frontend/creo_mobile/default/template/catalog/category/categorylist.phtml
@@ -38,13 +38,13 @@ $class = "";
 
 <li class="item <?=$class?>"> 
 <a href="<?php echo $baseurl."bulk-orders/" ?>" title="<?php echo $this->htmlEscape($_category->getName()) ?>"><img src="<?php echo $_category->getImageUrl() ?>" width="100" alt="<?php echo $this->htmlEscape($_category->getName()) ?>" /></a>
-<h2><a href="<?php echo $baseurl."bulk-orders/" ?>" title="<?php echo $this->htmlEscape($_category->getName()) ?>"><?php echo $this->htmlEscape($_category->getName()) ?></a></h2>
+<h2><a href="<?php echo $baseurl."bulk-orders/" ?>" title="<?php echo $this->htmlEscape($_category->getName()) ?>"><?php echo $this->__($this->htmlEscape($_category->getName())); ?></a></h2>
 </li>
 
 <?php } else { ?>
 <li class="item <?=$class?>">
 <a href="<?php echo $_category->getURL() ?>" title="<?php echo $this->htmlEscape($_category->getName()) ?>"><img src="<?php echo $_category->getImageUrl() ?>" width="100" alt="<?php echo $this->htmlEscape($_category->getName()) ?>" /></a>
-<h2><a href="<?php echo $_category->getURL() ?>" title="<?php echo $this->htmlEscape($_category->getName()) ?>"><?php echo $this->htmlEscape($_category->getName()) ?></a></h2>
+<h2><a href="<?php echo $_category->getURL() ?>" title="<?php echo $this->htmlEscape($_category->getName()) ?>"><?php echo $this->__($this->htmlEscape($_category->getName())); ?></a></h2>
 </li>
 <?php } ?>
 
