--- a/skin/frontend/creo_mobile/default/css/styles.css
+++ b/skin/frontend/creo_mobile/default/css/styles.css
@@ -341,5 +341,5 @@
   padding: 0;
 }
 /*Messages are shifted to popups using these hidden fields, so do not remove*/
-.input-box .validation-advice {visibility:hidden;}
+.input-box .validation-advice {/*visibility:hidden;*/}
 /*Disabled visibility because, the messages are now shown in popups*/
